gap after first column not fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+table {
+    /* border-spacing: 0; */
+    /* border-collapse: collapse; */
+}
+
 .calculator {
     padding: 10px;
     height: 380px;
@@ -5,6 +10,7 @@
     margin: 30px auto;
     background-color: 15133C;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    
 }
 
 .display {
@@ -67,49 +73,3 @@ input:active[type=button] {
     margin: auto auto;
 }
 
-/* p {
-    border: 2px solid green ;
-    width: 100%;
-    height: 8%;
-    width: 25%;
-    text-align: right;
-    margin: 20px auto;
-}
-
-i {
-    height: 18px;
-}
-
-.sq_root {
-    height: 18px;
-    margin: 0 auto 0;
-}
-
-.row_1 {
-    width: 25%;
-    margin: -21px auto;
-}
-
-.row_2 {
-    width: 25%;
-    margin: 19px auto 0;
-}
-
-.row_3 {
-    width: 25%;
-    margin: -2px auto 0;
-}
-
-.row_4 {
-    width: 25%;
-    margin: -4px auto 0;
-}
-
-.button {
-    border: 1px solid black;
-    display: inline-block;
-    zoom: 1;
-    width: 16.9%;
-    text-align: center;
-    padding: 5px;
-} */
